--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ h1 {
     </div>
 
     <div class="note">
-        Scan QR menggunakan aplikasi pembayaran kamu
+        Scan QR menggunakan aplikasi gopay
     </div>
 
     <div class="wa-info">
